TP4/obj/TP4.output
Terminals unused in grammar

   LITERALCADENA
   ERROR
   NOIGUAL
   IGUALIGUAL


Estado 34 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 131 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input sentencia

    3 numero: NUM
    4       | REAL

    5 sentencia: sentenciaDeclaracion
    6          | sentenciaCompuesta
    7          | sentenciaExpresion
    8          | sentenciaIteracion
    9          | sentenciaEtiquetada
   10          | sentenciaSeleccion
   11          | sentenciaRetorno
   12          | ';'

   13 $@1: /* vacío */

   14 sentenciaDeclaracion: TIPO_DATO $@1 parteFinalDeclaracion

   15 $@2: /* vacío */

   16 sentenciaDeclaracion: TOKEN_VOID $@2 sentenciaFuncion

   17 sentenciaSeleccion: IF '(' expresion ')' sentencia
   18                   | IF '(' expresion ')' sentencia ELSE sentencia
   19                   | SWITCH '(' expresion ')' sentencia

   20 sentenciaEtiquetada: CASE constante ':' sentencia
   21                    | DEFAULT ':' sentencia

   22 sentenciaRetorno: RETURN expresion ';'

   23 constante: numero
   24          | CCHAR

   25 sentenciaIteracion: FOR '(' expresionOpcional ';' expresionOpcional ';' expresionOpcional ')' sentencia
   26                   | WHILE '(' expresion ')' sentencia
   27                   | DO sentencia WHILE '(' expresion ')' ';'

   28 expresionOpcional: expresion
   29                  | /* vacío */

   30 parteFinalDeclaracion: declaraId ';'
   31                      | declaraId ',' listaIdentificadores ';'
   32                      | sentenciaFuncion

   33 $@3: /* vacío */

   34 sentenciaFuncion: ID $@3 '(' listaDeParametros ')' declaracionODefFuncion

   35 declaracionODefFuncion: ';'
   36                       | sentenciaCompuesta

   37 listaIdentificadores: declaraId ',' listaIdentificadores
   38                     | declaraId

   39 listaDeParametros: /* vacío */
   40                  | TIPO_DATO ID ',' listaDeParametros
   41                  | TIPO_DATO ID

   42 sentenciaCompuesta: '{' listaDeSentencias '}'

   43 listaDeSentencias: sentencia listaDeSentencias
   44                  | sentencia

   45 opAsignacion: MENOSIGUAL
   46             | MASIGUAL
   47             | PORIGUAL
   48             | DIVIDIDOIGUAL

   49 sentenciaExpresion: listaDeExpresiones ';'

   50 invocacionFuncion: ID '(' listaDeExpresiones ')'
   51                  | ID '(' ')'

   52 expresionDeAsignacion: ID opAsignacionGeneral listaDeExpresiones

   53 opAsignacionGeneral: '='
   54                    | opAsignacion

   55 declaraId: ID
   56          | ID '=' expresion

   57 listaDeExpresiones: expresion
   58                   | expresion ',' listaDeExpresiones

   59 expresion: numero
   60          | ID
   61          | expresionDeAsignacion
   62          | expresion '+' expresion
   63          | expresion '-' expresion
   64          | expresion '*' expresion
   65          | expresion '/' expresion
   66          | expresionUnaria
   67          | expresion '^' expresion
   68          | '(' expresion ')'
   69          | opPreDecremento
   70          | opPreIncremento
   71          | opPostDecremento
   72          | opPostIncremento
   73          | expresion YLOGICO expresion
   74          | expresion OLOGICO expresion
   75          | expresion '<' expresion
   76          | expresion '>' expresion
   77          | expresion MENORIGUAL expresion
   78          | expresion MAYORIGUAL expresion
   79          | invocacionFuncion

   80 opPostDecremento: expresion OP_DECREMENTO

   81 opPreDecremento: OP_DECREMENTO ID

   82 opPostIncremento: ID OP_INCREMENTO

   83 opPreIncremento: OP_INCREMENTO ID

   84 expresionUnaria: '-' expresion


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 17 18 19 25 26 27 34 50 51 68
')' (41) 17 18 19 25 26 27 34 50 51 68
'*' (42) 64
'+' (43) 62
',' (44) 31 37 40 58
'-' (45) 63 84
'/' (47) 65
':' (58) 20 21
';' (59) 12 22 25 27 30 31 35 49
'<' (60) 75
'=' (61) 53 56
'>' (62) 76
'^' (94) 67
'{' (123) 42
'}' (125) 42
error (256)
CCHAR (258) 24
NUM (259) 3
LITERALCADENA (260)
ID (261) 34 40 41 50 51 52 55 56 60 81 82 83
TIPO_DATO (262) 14 40 41
ERROR (263)
REAL (264) 4
TOKEN_VOID (265) 16
FOR (266) 25
IF (267) 17 18
WHILE (268) 26 27
DO (269) 27
CASE (270) 20
DEFAULT (271) 21
SWITCH (272) 19
ELSE (273) 18
RETURN (274) 22
OP_DECREMENTO (275) 80 81
OP_INCREMENTO (276) 82 83
MAYORIGUAL (277) 78
MENORIGUAL (278) 77
NOIGUAL (279)
IGUALIGUAL (280)
YLOGICO (281) 73
OLOGICO (282) 74
DIVIDIDOIGUAL (283) 48
PORIGUAL (284) 47
MENOSIGUAL (285) 45
MASIGUAL (286) 46


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
input (48)
    en la izquierda: 1 2, en la derecha: 0 2
numero (49)
    en la izquierda: 3 4, en la derecha: 23 59
sentencia (50)
    en la izquierda: 5 6 7 8 9 10 11 12, en la derecha: 2 17 18 19
    20 21 25 26 27 43 44
sentenciaDeclaracion (51)
    en la izquierda: 14 16, en la derecha: 5
$@1 (52)
    en la izquierda: 13, en la derecha: 14
$@2 (53)
    en la izquierda: 15, en la derecha: 16
sentenciaSeleccion (54)
    en la izquierda: 17 18 19, en la derecha: 10
sentenciaEtiquetada (55)
    en la izquierda: 20 21, en la derecha: 9
sentenciaRetorno (56)
    en la izquierda: 22, en la derecha: 11
constante (57)
    en la izquierda: 23 24, en la derecha: 20
sentenciaIteracion (58)
    en la izquierda: 25 26 27, en la derecha: 8
expresionOpcional (59)
    en la izquierda: 28 29, en la derecha: 25
parteFinalDeclaracion (60)
    en la izquierda: 30 31 32, en la derecha: 14
sentenciaFuncion (61)
    en la izquierda: 34, en la derecha: 16 32
$@3 (62)
    en la izquierda: 33, en la derecha: 34
declaracionODefFuncion (63)
    en la izquierda: 35 36, en la derecha: 34
listaIdentificadores (64)
    en la izquierda: 37 38, en la derecha: 31 37
listaDeParametros (65)
    en la izquierda: 39 40 41, en la derecha: 34 40
sentenciaCompuesta (66)
    en la izquierda: 42, en la derecha: 6 36
listaDeSentencias (67)
    en la izquierda: 43 44, en la derecha: 42 43
opAsignacion (68)
    en la izquierda: 45 46 47 48, en la derecha: 54
sentenciaExpresion (69)
    en la izquierda: 49, en la derecha: 7
invocacionFuncion (70)
    en la izquierda: 50 51, en la derecha: 79
expresionDeAsignacion (71)
    en la izquierda: 52, en la derecha: 61
opAsignacionGeneral (72)
    en la izquierda: 53 54, en la derecha: 52
declaraId (73)
    en la izquierda: 55 56, en la derecha: 30 31 37 38
listaDeExpresiones (74)
    en la izquierda: 57 58, en la derecha: 49 50 52 58
expresion (75)
    en la izquierda: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79, en la derecha: 17 18 19 22 26 27 28 56 57 58 62
    63 64 65 67 68 73 74 75 76 77 78 80 84
opPostDecremento (76)
    en la izquierda: 80, en la derecha: 71
opPreDecremento (77)
    en la izquierda: 81, en la derecha: 69
opPostIncremento (78)
    en la izquierda: 82, en la derecha: 72
opPreIncremento (79)
    en la izquierda: 83, en la derecha: 70
expresionUnaria (80)
    en la izquierda: 84, en la derecha: 66


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . sentencia

    $end           desplazar e ir al estado 2
    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    TIPO_DATO      desplazar e ir al estado 5
    REAL           desplazar e ir al estado 6
    TOKEN_VOID     desplazar e ir al estado 7
    FOR            desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    DO             desplazar e ir al estado 11
    CASE           desplazar e ir al estado 12
    DEFAULT        desplazar e ir al estado 13
    SWITCH         desplazar e ir al estado 14
    RETURN         desplazar e ir al estado 15
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    ';'            desplazar e ir al estado 19
    '('            desplazar e ir al estado 20
    '{'            desplazar e ir al estado 21

    numero                 ir al estado 22
    sentencia              ir al estado 23
    sentenciaDeclaracion   ir al estado 24
    sentenciaSeleccion     ir al estado 25
    sentenciaEtiquetada    ir al estado 26
    sentenciaRetorno       ir al estado 27
    sentenciaIteracion     ir al estado 28
    sentenciaCompuesta     ir al estado 29
    sentenciaExpresion     ir al estado 30
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    listaDeExpresiones     ir al estado 33
    expresion              ir al estado 34
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    3 numero: NUM .

    $default  reduce usando la regla 3 (numero)


estado 4

   50 invocacionFuncion: ID . '(' listaDeExpresiones ')'
   51                  | ID . '(' ')'
   52 expresionDeAsignacion: ID . opAsignacionGeneral listaDeExpresiones
   60 expresion: ID .
   82 opPostIncremento: ID . OP_INCREMENTO

    OP_INCREMENTO  desplazar e ir al estado 40
    '='            desplazar e ir al estado 41
    DIVIDIDOIGUAL  desplazar e ir al estado 42
    PORIGUAL       desplazar e ir al estado 43
    MENOSIGUAL     desplazar e ir al estado 44
    MASIGUAL       desplazar e ir al estado 45
    '('            desplazar e ir al estado 46

    $default  reduce usando la regla 60 (expresion)

    opAsignacion         ir al estado 47
    opAsignacionGeneral  ir al estado 48


estado 5

   14 sentenciaDeclaracion: TIPO_DATO . $@1 parteFinalDeclaracion

    $default  reduce usando la regla 13 ($@1)

    $@1  ir al estado 49


estado 6

    4 numero: REAL .

    $default  reduce usando la regla 4 (numero)


estado 7

   16 sentenciaDeclaracion: TOKEN_VOID . $@2 sentenciaFuncion

    $default  reduce usando la regla 15 ($@2)

    $@2  ir al estado 50


estado 8

   25 sentenciaIteracion: FOR . '(' expresionOpcional ';' expresionOpcional ';' expresionOpcional ')' sentencia

    '('  desplazar e ir al estado 51


estado 9

   17 sentenciaSeleccion: IF . '(' expresion ')' sentencia
   18                   | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 52


estado 10

   26 sentenciaIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 53


estado 11

   27 sentenciaIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    TIPO_DATO      desplazar e ir al estado 5
    REAL           desplazar e ir al estado 6
    TOKEN_VOID     desplazar e ir al estado 7
    FOR            desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    DO             desplazar e ir al estado 11
    CASE           desplazar e ir al estado 12
    DEFAULT        desplazar e ir al estado 13
    SWITCH         desplazar e ir al estado 14
    RETURN         desplazar e ir al estado 15
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    ';'            desplazar e ir al estado 19
    '('            desplazar e ir al estado 20
    '{'            desplazar e ir al estado 21

    numero                 ir al estado 22
    sentencia              ir al estado 54
    sentenciaDeclaracion   ir al estado 24
    sentenciaSeleccion     ir al estado 25
    sentenciaEtiquetada    ir al estado 26
    sentenciaRetorno       ir al estado 27
    sentenciaIteracion     ir al estado 28
    sentenciaCompuesta     ir al estado 29
    sentenciaExpresion     ir al estado 30
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    listaDeExpresiones     ir al estado 33
    expresion              ir al estado 34
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 12

   20 sentenciaEtiquetada: CASE . constante ':' sentencia

    CCHAR  desplazar e ir al estado 55
    NUM    desplazar e ir al estado 3
    REAL   desplazar e ir al estado 6

    numero     ir al estado 56
    constante  ir al estado 57


estado 13

   21 sentenciaEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 58


estado 14

   19 sentenciaSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 59


estado 15

   22 sentenciaRetorno: RETURN . expresion ';'

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 60
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 16

   81 opPreDecremento: OP_DECREMENTO . ID

    ID  desplazar e ir al estado 61


estado 17

   83 opPreIncremento: OP_INCREMENTO . ID

    ID  desplazar e ir al estado 62


estado 18

   84 expresionUnaria: '-' . expresion

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 63
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 19

   12 sentencia: ';' .

    $default  reduce usando la regla 12 (sentencia)


estado 20

   68 expresion: '(' . expresion ')'

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 64
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 21

   42 sentenciaCompuesta: '{' . listaDeSentencias '}'

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    TIPO_DATO      desplazar e ir al estado 5
    REAL           desplazar e ir al estado 6
    TOKEN_VOID     desplazar e ir al estado 7
    FOR            desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    DO             desplazar e ir al estado 11
    CASE           desplazar e ir al estado 12
    DEFAULT        desplazar e ir al estado 13
    SWITCH         desplazar e ir al estado 14
    RETURN         desplazar e ir al estado 15
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    ';'            desplazar e ir al estado 19
    '('            desplazar e ir al estado 20
    '{'            desplazar e ir al estado 21

    numero                 ir al estado 22
    sentencia              ir al estado 65
    sentenciaDeclaracion   ir al estado 24
    sentenciaSeleccion     ir al estado 25
    sentenciaEtiquetada    ir al estado 26
    sentenciaRetorno       ir al estado 27
    sentenciaIteracion     ir al estado 28
    sentenciaCompuesta     ir al estado 29
    listaDeSentencias      ir al estado 66
    sentenciaExpresion     ir al estado 30
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    listaDeExpresiones     ir al estado 33
    expresion              ir al estado 34
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 22

   59 expresion: numero .

    $default  reduce usando la regla 59 (expresion)


estado 23

    2 input: input sentencia .

    $default  reduce usando la regla 2 (input)


estado 24

    5 sentencia: sentenciaDeclaracion .

    $default  reduce usando la regla 5 (sentencia)


estado 25

   10 sentencia: sentenciaSeleccion .

    $default  reduce usando la regla 10 (sentencia)


estado 26

    9 sentencia: sentenciaEtiquetada .

    $default  reduce usando la regla 9 (sentencia)


estado 27

   11 sentencia: sentenciaRetorno .

    $default  reduce usando la regla 11 (sentencia)


estado 28

    8 sentencia: sentenciaIteracion .

    $default  reduce usando la regla 8 (sentencia)


estado 29

    6 sentencia: sentenciaCompuesta .

    $default  reduce usando la regla 6 (sentencia)


estado 30

    7 sentencia: sentenciaExpresion .

    $default  reduce usando la regla 7 (sentencia)


estado 31

   79 expresion: invocacionFuncion .

    $default  reduce usando la regla 79 (expresion)


estado 32

   61 expresion: expresionDeAsignacion .

    $default  reduce usando la regla 61 (expresion)


estado 33

   49 sentenciaExpresion: listaDeExpresiones . ';'

    ';'  desplazar e ir al estado 67


estado 34

   57 listaDeExpresiones: expresion .
   58                   | expresion . ',' listaDeExpresiones
   62 expresion: expresion . '+' expresion
   63          | expresion . '-' expresion
   64          | expresion . '*' expresion
   65          | expresion . '/' expresion
   67          | expresion . '^' expresion
   73          | expresion . YLOGICO expresion
   74          | expresion . OLOGICO expresion
   75          | expresion . '<' expresion
   76          | expresion . '>' expresion
   77          | expresion . MENORIGUAL expresion
   78          | expresion . MAYORIGUAL expresion
   80 opPostDecremento: expresion . OP_DECREMENTO

    OP_DECREMENTO  desplazar e ir al estado 68
    '+'            desplazar e ir al estado 69
    '-'            desplazar e ir al estado 70
    '*'            desplazar e ir al estado 71
    '/'            desplazar e ir al estado 72
    '^'            desplazar e ir al estado 73
    '<'            desplazar e ir al estado 74
    '>'            desplazar e ir al estado 75
    MAYORIGUAL     desplazar e ir al estado 76
    MENORIGUAL     desplazar e ir al estado 77
    YLOGICO        desplazar e ir al estado 78
    OLOGICO        desplazar e ir al estado 79
    ','            desplazar e ir al estado 80

    OP_DECREMENTO  [reduce usando la regla 57 (listaDeExpresiones)]
    '+'            [reduce usando la regla 57 (listaDeExpresiones)]
    '-'            [reduce usando la regla 57 (listaDeExpresiones)]
    '*'            [reduce usando la regla 57 (listaDeExpresiones)]
    '/'            [reduce usando la regla 57 (listaDeExpresiones)]
    '^'            [reduce usando la regla 57 (listaDeExpresiones)]
    '<'            [reduce usando la regla 57 (listaDeExpresiones)]
    '>'            [reduce usando la regla 57 (listaDeExpresiones)]
    MAYORIGUAL     [reduce usando la regla 57 (listaDeExpresiones)]
    MENORIGUAL     [reduce usando la regla 57 (listaDeExpresiones)]
    YLOGICO        [reduce usando la regla 57 (listaDeExpresiones)]
    OLOGICO        [reduce usando la regla 57 (listaDeExpresiones)]
    ','            [reduce usando la regla 57 (listaDeExpresiones)]
    $default       reduce usando la regla 57 (listaDeExpresiones)


estado 35

   71 expresion: opPostDecremento .

    $default  reduce usando la regla 71 (expresion)


estado 36

   69 expresion: opPreDecremento .

    $default  reduce usando la regla 69 (expresion)


estado 37

   72 expresion: opPostIncremento .

    $default  reduce usando la regla 72 (expresion)


estado 38

   70 expresion: opPreIncremento .

    $default  reduce usando la regla 70 (expresion)


estado 39

   66 expresion: expresionUnaria .

    $default  reduce usando la regla 66 (expresion)


estado 40

   82 opPostIncremento: ID OP_INCREMENTO .

    $default  reduce usando la regla 82 (opPostIncremento)


estado 41

   53 opAsignacionGeneral: '=' .

    $default  reduce usando la regla 53 (opAsignacionGeneral)


estado 42

   48 opAsignacion: DIVIDIDOIGUAL .

    $default  reduce usando la regla 48 (opAsignacion)


estado 43

   47 opAsignacion: PORIGUAL .

    $default  reduce usando la regla 47 (opAsignacion)


estado 44

   45 opAsignacion: MENOSIGUAL .

    $default  reduce usando la regla 45 (opAsignacion)


estado 45

   46 opAsignacion: MASIGUAL .

    $default  reduce usando la regla 46 (opAsignacion)


estado 46

   50 invocacionFuncion: ID '(' . listaDeExpresiones ')'
   51                  | ID '(' . ')'

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20
    ')'            desplazar e ir al estado 81

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    listaDeExpresiones     ir al estado 82
    expresion              ir al estado 34
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 47

   54 opAsignacionGeneral: opAsignacion .

    $default  reduce usando la regla 54 (opAsignacionGeneral)


estado 48

   52 expresionDeAsignacion: ID opAsignacionGeneral . listaDeExpresiones

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    listaDeExpresiones     ir al estado 83
    expresion              ir al estado 34
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 49

   14 sentenciaDeclaracion: TIPO_DATO $@1 . parteFinalDeclaracion

    ID  desplazar e ir al estado 84

    parteFinalDeclaracion  ir al estado 85
    sentenciaFuncion       ir al estado 86
    declaraId              ir al estado 87


estado 50

   16 sentenciaDeclaracion: TOKEN_VOID $@2 . sentenciaFuncion

    ID  desplazar e ir al estado 88

    sentenciaFuncion  ir al estado 89


estado 51

   25 sentenciaIteracion: FOR '(' . expresionOpcional ';' expresionOpcional ';' expresionOpcional ')' sentencia

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    $default  reduce usando la regla 29 (expresionOpcional)

    numero                 ir al estado 22
    expresionOpcional      ir al estado 90
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 91
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 52

   17 sentenciaSeleccion: IF '(' . expresion ')' sentencia
   18                   | IF '(' . expresion ')' sentencia ELSE sentencia

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 92
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 53

   26 sentenciaIteracion: WHILE '(' . expresion ')' sentencia

    NUM            desplazar e ir al estado 3
    ID             desplazar e ir al estado 4
    REAL           desplazar e ir al estado 6
    OP_DECREMENTO  desplazar e ir al estado 16
    OP_INCREMENTO  desplazar e ir al estado 17
    '-'            desplazar e ir al estado 18
    '('            desplazar e ir al estado 20

    numero                 ir al estado 22
    invocacionFuncion      ir al estado 31
    expresionDeAsignacion  ir al estado 32
    expresion              ir al estado 93
    opPostDecremento       ir al estado 35
    opPreDecremento        ir al estado 36
    opPostIncremento       ir al estado 37
    opPreIncremento        ir al estado 38
    expresionUnaria        ir al estado 39


estado 54

   27 sentenciaIteracion: DO sentencia . WHILE '(' expresion ')' ';'

    WHILE  desplazar e ir al estado 94


estado 55

   24 constante: CCHAR .

    $default  reduce usando la regla 24 (constante)


estado 56

   23 constante: numero .

    $default  reduce usando la regla 23 (constante)


estado 57

   20 sentenciaEtiquetada: CASE constante . ':' sentencia

    ':'  desplazar e ir al estado 95


estado 58

   21 sentenciaEtiquetada: DEFAULT ':' . sentencia
